<resources>
    <string name="app_name">AndroidxLibrary</string>
    <string name="aa_tv_text">Say hello!</string>
</resources>
