<resources>
    <string name="app_name">EspressoLibrary</string>
    <string name="ae_tv_text">Say hello!</string>
</resources>
